[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/monogram.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.756863 )

[node name="MainPause" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -210.0
margin_right = 164.0
margin_bottom = -112.0

[node name="Label" type="Label" parent="MainPause"]
margin_right = 297.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.258824 )
text = "Paused"
align = 1

[node name="Return To Lobby" type="Button" parent="MainPause"]
margin_top = 45.0
margin_right = 297.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.243137 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Return to Lobby"
flat = true
align = 0

[node name="SettingsButton" type="Button" parent="MainPause"]
margin_top = 96.0
margin_right = 297.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.243137 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Settings"
flat = true
align = 0

[node name="QuitGameButton" type="Button" parent="MainPause"]
margin_top = 147.0
margin_right = 297.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.243137 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quit Game"
flat = true
align = 0

[node name="Settings" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -210.0
margin_right = 164.0
margin_bottom = -112.0

[node name="Label" type="Label" parent="Settings"]
margin_right = 221.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.258824 )
text = "Settings"
align = 1

[node name="FullscreenCheckbox" type="CheckBox" parent="Settings"]
margin_top = 45.0
margin_right = 221.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 0.27451 )
custom_colors/font_color = Color( 1, 1, 1, 0.270588 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.27451 )
text = "Fullscreen"
flat = true
align = 2

[node name="MuteSoundsButton" type="Button" parent="Settings"]
margin_top = 98.0
margin_right = 221.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.243137 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Mute Sounds"
flat = true
align = 0

[node name="MuteMusicButton" type="Button" parent="Settings"]
margin_top = 149.0
margin_right = 221.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.243137 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Mute Music"
flat = true
align = 0

[node name="BackButton" type="Button" parent="Settings"]
margin_top = 200.0
margin_right = 221.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.243137 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"
flat = true
align = 0

[connection signal="pressed" from="MainPause/Return To Lobby" to="." method="_on_Return_To_Lobby_pressed"]
[connection signal="pressed" from="MainPause/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MainPause/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
[connection signal="pressed" from="Settings/FullscreenCheckbox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="Settings/MuteSoundsButton" to="." method="_on_MuteSoundsButton_pressed"]
[connection signal="pressed" from="Settings/MuteMusicButton" to="." method="_on_MuteMusicButton_pressed"]
[connection signal="pressed" from="Settings/BackButton" to="." method="_on_BackButton_pressed"]
